vendor: pull in vendored dependency sources